Tried to start Laravel to store data, but it was too hard, so I gave up and installed firebase

--- a/public/styles.css
+++ b/public/styles.css
@@ -8,6 +8,9 @@ body {
     background: linear-gradient(-90deg, #84CF6A, #16C0B0);
     height: 60px;
     margin-bottom: 15px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
   }
 
   .product {
