--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,21 @@ body {
     color:#282828;
     margin: 0px;
   }
+
+  .h2, h2 {
+    font-size: 2rem;
+  }
+
+  .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    margin-bottom: .5rem;
+    font-weight: 500;
+    line-height: 1.2;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: .5rem;
+  }
   
   table {
     width: 100%;
@@ -10,11 +25,18 @@ body {
     border-collapse: collapse;
   }
   
-  th,
+  th{
+    padding-top: 0.75rem;
+    padding-right: 0.75rem;
+    padding-bottom: 0.75rem;
+    padding-left: 0.75rem;
+    border: 1px solid #ccc;
+  }
   td {
     padding: 5px;
     border: 1px solid #ccc;
     text-align: center;
+    vertical-align:middle;
   }
   
   thead tr {
@@ -34,6 +56,18 @@ body {
     color: blue;
     border: solid 1px blue;
     border-radius: 2px;
+    font-size: inherit;
+  }
+
+  .update-modal{
+    margin: 10px;
+    height: 60px;
+    width: 130px;
+    background-color: white;
+    color: blue;
+    border: solid 1px blue;
+    border-radius: 2px;
+    font-size: inherit;
   }
 
   .delete{
@@ -44,6 +78,7 @@ body {
     color: blue;
     border: solid 1px blue;
     border-radius: 2px;
+    font-size: inherit;
   }
 
   .nav-bar {
@@ -99,6 +134,7 @@ body {
     height: 40px;
     width: 100px;
     font-size: 14px;
+    cursor: pointer
   } 
   
   .disabledButton {
@@ -113,9 +149,10 @@ body {
   }
   
   input {
-    width: 100%;  
+    width: 10%;  
     height: 25px;
     margin-bottom: 20px;
+    cursor: pointer
   }
   
   textarea {
@@ -132,3 +169,117 @@ body {
     color: #16C0B0;
     text-decoration: underline;
   }
+
+  .form-group {
+    margin-bottom: 1rem;
+  }
+
+  .container {
+    max-width: 960px;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  } 
+
+  .mt-5, .my-5 {
+    margin-top: 3rem!important;
+  }
+
+  .col-sm-6 {
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+    position: relative;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
+  *, ::after, ::before {
+    box-sizing: border-box;
+  }
+  .row {
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+  }
+
+  .form-control{
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding-top: 0.375rem;
+    padding-right: 0.75rem;
+    padding-bottom: 0.375rem;
+    padding-left: 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border-top-color: rgb(206, 212, 218);
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-right-color: rgb(206, 212, 218);
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-bottom-color: rgb(206, 212, 218);
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-left-color: rgb(206, 212, 218);
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-image-source: initial;
+    border-image-slice: initial;
+    border-image-width: initial;
+    border-image-outset: initial;
+    border-image-repeat: initial;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+    border-bottom-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+  }
+
+  .btn {
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    padding-top: 0.375rem;
+    padding-right: 0.75rem;
+    padding-bottom: 0.375rem;
+    padding-left: 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+    border-bottom-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+  }
+  .btn-info {
+    color: #fff;
+    background-color: #17a2b8;
+    border-color: #17a2b8;
+  }
+
+  .mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+  }
+
+  .btn-primary {
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+    font-size: 14px;
+  } 
